# dw-low-price

./: pyproject.toml
backend/fake_api/: product.py  start.py
tmp/: .~lock.Catálogo de produto - OK.xlsx#  Catálogo de produto - Error.xlsx  Catálogo de produto - OK.xlsx  Programa - Request.docx  Template - Request.docx  store_ok.xlsx
